src/ui/features/plan_review/render/snapshots/terraleph__ui__features__plan_review__render__tests__preview_80x24_apply-confirmation.snap
---
source: src/ui/features/plan_review/render/tests.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default Tool: terraform loading... Dir: /re...ain
Cmain [PROD]  ws:default  terraform loading...  /repo/environm...roduction/main

─┌────────────────────────────────────────────────────────────────────────────┐─
 │                                                                            │▲
 │ Apply this reviewed plan?                                                  │┃
 │ ! Warning: this plan destroys or replaces resources in production.         │┃
 │                                                                            │┃
 │ Target: main [PROD]                                                        │┃
 │ Workspace: default                                                         │┃
 │ Directory: /repo/environments/production/main                              │┃
 │ Tool: terraform loading...                                                 │┃
-│ Plan: +1 add  ~1 update  1 replace  -1 destroy                             ││
 │                                                                            ││
 │ Destroy:                                                                   ││
 │   terraform_data.old                                                       ││
 │ Replace:                                                                   ││
 │                                                                            ││
 │ To confirm, type "main" below.                                             ││
 │ > |                                                                        ││
 │                                                                            ││
◀︎└────────────────────────────────────────────────────────────────────────────┘▶︎
─Enter apply | Esc back | ? help────────────────────────────────────────────────
s overview | / filter | a apply | ? help | q quit                      Line 3/43
