src/ui/features/plan_review/render/snapshots/terraleph__ui__features__plan_review__render__tests__preview_80x24_help.snap
---
source: src/ui/features/plan_review/render/tests.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default Tool: terraform loading... Dir: /re...ain
Changes  +1 add  ~1 update  1 replace  -1 destroy
                  ┌Help─────────────────────────────────────┐
──────────────────│ Navigation                              │───────────────────
  # terraform_data│ ↑ / ↓ / j / k scroll vertically         │                  ▲
  ~ resource "terr│ ← / → / h / l scroll horizontally       │                  ┃
      id       = "│ PgUp / PgDn   scroll one page           │                  ┃
      ~ input  = "│ Home / End    go to the top or bottom   │                  ┃
      # (4 unchang│ s             overview                  │                  ┃
    }             │                                         │                  ┃
                  │ Review                                  │                  ┃
  # terraform_data│ /             filter the full plan      │                  ┃
-/+ resource "terr│                                         │                  │
      ~ input = "w│ Actions                                 │placement         │
      - old_checks│ c             show execution context    │ef0123456789abcdef│
      + new_checks│ y             copy the full plan        │                  │
    }             │ a             apply the full plan       │                  │
                  │                                         │                  │
  # terraform_data│ Exit                                    │                  │
  - resource "terr│ q             quit                      │                  │
      id = "old-20│ ?/Esc close                             │                  │
◀︎═════════════════└─────────────────────────────────────────┘═══════───────────▶︎
────────────────────────────────────────────────────────────────────────────────
s overview | / filter | a apply | ? help | q quit                      Line 3/43
