src/ui/features/plan_review/render/snapshots/terraleph__ui__features__plan_review__render__tests__preview_80x24_long-target.snap
---
source: src/ui/features/plan_review/render/tests.rs
expression: buffer_text(buffer)
---
Target: very...view [PROD] Workspace: default Tool: terraform 1.9.0 Dir: ./e...w
Changes  +1 add  ~1 update  1 replace  -1 destroy

────────────────────────────────────────────────────────────────────────────────
  # terraform_data.api will be updated in-place                                ▲
  ~ resource "terraform_data" "api" {                                          ┃
      id       = "api-20260920"                                                ┃
      ~ input  = "before" -> "after"                                           ┃
      # (4 unchanged attributes hidden)                                        ┃
    }                                                                          ┃
                                                                               ┃
  # terraform_data.worker must be replaced                                     ┃
-/+ resource "terraform_data" "worker" {                                       │
      ~ input = "worker-before" -> "worker-after" # forces replacement         │
      - old_checksum = "sha256:0123456789abcdef0123456789abcdef0123456789abcdef│
      + new_checksum = (known after apply)                                     │
    }                                                                          │
                                                                               │
  # terraform_data.old will be destroyed                                       │
  - resource "terraform_data" "old" {                                          │
      id = "old-20260920"                                                      │
◀︎═══════════════════════════════════════════════════════════════════───────────▶︎
────────────────────────────────────────────────────────────────────────────────
s overview | / filter | a apply | ? help | q quit                      Line 3/43
